[gd_scene load_steps=2 format=2]

[ext_resource path="res://environment/hazards/laser_emitter/laser_emitter_group.gd" type="Script" id=1]

[node name="LaserEmitterGroup" type="Node2D"]
script = ExtResource( 1 )

[node name="LaserEmitters" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
